# kazan

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  update-headers.yml
crates/generator/: Cargo.toml
crates/generator-rewrite/: Cargo.toml
crates/generator-rewrite/src/: ctype.rs  lib.rs  main.rs  module.rs  overrides.rs  xml.rs
crates/generator-rewrite/src/emit/: command.rs  constant.rs  enumeration.rs  func_pointer.rs  handle.rs  mod.rs  module.rs  structure.rs  union.rs
crates/generator-rewrite/src/model/: command.rs  constant.rs  enumeration.rs  external.rs  ffi.rs  func_pointer.rs  handle.rs  mod.rs  rust_type.rs  structure.rs  union.rs
crates/generator/src/: analysis.rs  cdecl.rs  command.rs  constants.rs  ctype_rust.rs  enums.rs  external.rs  ffi.rs  handle.rs  lib.rs  main.rs  module.rs  overrides.rs  structs.rs  xml.rs
crates/generator/src/emit/: enumeration.rs  external.rs  ffi.rs  func_pointer.rs  mod.rs  union.rs
crates/generator/src/model/: command.rs  enumeration.rs  func_pointer.rs  handle.rs  module.rs  rust_type.rs  union.rs
crates/kazan/: Cargo.toml
crates/kazan-examples/: Cargo.toml
crates/kazan-examples/src/: lib.rs
crates/kazan-sys/: Cargo.toml
crates/kazan-sys/src/: lib.rs
crates/kazan/src/: array_cstr.rs  chain.rs  extensions.rs  generated.rs  lib.rs  loading.rs  macros.rs  util.rs  version.rs  vk.rs  window.rs
crates/kazan/src/vk/: chain.rs  mod.rs  version.rs
crates/kazan/tests/: constant_size_arrays.rs
crates/kazan/tests/fail/: long_lived_root_struct_borrow.rs  long_lived_root_struct_borrow.stderr
