[package]
name = "kazan-examples"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
winit = { version = "0.29", features = ["rwh_06"] }
# The examples require the validation layers, which means the SDK or
# equivalent development packages should be present, so we can link
# directly and benefit from the infallible `Entry` constructor.
# Provisional features are required to access VK_KHR_portability_subset for MoltenVK
kazan = { path = "../kazan", default-features = false, features = ["linked", "debug", "std", "window"] }
