[package]
name = "kazan"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["debug", "loaded", "std"]
debug = []
provisional = []
linked = []
loaded = ["libloading", "std"]
std = []

[dependencies]
libloading = { version = "0.9", optional = true }