[package]
name = "kazan"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["debug", "loaded", "std", "provisional", "ffi", "window"]
debug = []
provisional = []
linked = []
loaded = ["libloading", "std"]
std = []
window = ["raw-window-handle"]
ffi = []

[dependencies]
libloading = { version = "0.9", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[dev-dependencies]
trybuild = "1.0"